--- a/index.html
+++ b/index.html
@@ -2,9 +2,99 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Edward | Portfolio</title>
+
+    <!-- SEO & Meta Tags -->
+    <title>Edward M.C | Fullstack & Web3 Engineer | Portfolio</title>
+    <meta
+      name="description"
+      content="Portfolio of Edward M.C, a fullstack and Web3 engineer. Explore my projects, experience, and technical expertise in modern web development and blockchain technologies."
+    />
+    <meta
+      name="keywords"
+      content="fullstack engineer, web3 developer, blockchain, React, TypeScript, portfolio"
+    />
+    <meta name="author" content="Edward M.C" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#0f0f1e" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+
+    <!-- Open Graph (OG) Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://edwardmonsalve.tech" />
+    <meta
+      property="og:title"
+      content="Edward M.C | Fullstack & Web3 Engineer"
+    />
+    <meta
+      property="og:description"
+      content="Portfolio of Edward M.C, a fullstack and Web3 engineer. Explore my projects, experience, and technical expertise in modern web development and blockchain technologies."
+    />
+    <meta
+      property="og:image"
+      content="https://edwardmonsalve.tech/og-image.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Edward M.C Portfolio" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://edwardmonsalve.tech" />
+    <meta
+      name="twitter:title"
+      content="Edward M.C | Fullstack & Web3 Engineer"
+    />
+    <meta
+      name="twitter:description"
+      content="Portfolio of Edward M.C, a fullstack and Web3 engineer. Explore my projects, experience, and technical expertise in modern web development and blockchain technologies."
+    />
+    <meta
+      name="twitter:image"
+      content="https://edwardmonsalve.tech/og-image.png"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://edwardmonsalve.tech" />
+
+    <!-- Icons -->
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="apple-touch-icon" href="/logo.svg" />
+
+    <!-- Font Optimization -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      as="style"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Edward M.C",
+        "url": "https://edwardmonsalve.tech",
+        "image": "https://edwardmonsalve.tech/og-image.png",
+        "jobTitle": "Fullstack & Web3 Engineer",
+        "sameAs": [
+          "https://linkedin.com/in/edmonsalve",
+          "https://github.com/edmonsalve",
+          "https://twitter.com/edmonsalve"
+        ],
+        "description": "Fullstack and Web3 engineer specializing in modern web development and blockchain technologies"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
